fix: ホバーするとinvisible-cardが見える不具合を修正

--- a/public/styles/TopPage.css
+++ b/public/styles/TopPage.css
@@ -48,6 +48,9 @@
   color: #777;
 }
 
-.invisible {
+.invisible-thread-card {
+  width: 32%;
+  height: 170px;
+  margin-bottom: 16px;
   opacity: 0;
 }
